--- a/SduNetCheckTool.GUI/App.xaml
+++ b/SduNetCheckTool.GUI/App.xaml
@@ -1,9 +1,18 @@
-﻿<Application x:Class="SduNetCheckTool.GUI.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SduNetCheckTool.GUI"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="SduNetCheckTool.GUI.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:SduNetCheckTool.GUI"
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ui:ThemeResources />
+                <ui:XamlControlsResources />
+                <!--  Other merged dictionaries here  -->
+            </ResourceDictionary.MergedDictionaries>
+            <!--  Other app resources here  -->
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
