--- a/SduNetCheckTool.GUI/App.xaml
+++ b/SduNetCheckTool.GUI/App.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:SduNetCheckTool.GUI"
     xmlns:ui="http://schemas.modernwpf.com/2019"
-    StartupUri="MainWindow.xaml">
+    StartupUri="/Views/MainView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
