--- a/SduNetCheckTool.GUI/Views/MainView.xaml
+++ b/SduNetCheckTool.GUI/Views/MainView.xaml
@@ -2,59 +2,15 @@
     x:Class="SduNetCheckTool.GUI.Views.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:common="clr-namespace:SduNetCheckTool.GUI.Common"
-    xmlns:converters="clr-namespace:SduNetCheckTool.GUI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SduNetCheckTool.GUI"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
-    xmlns:viewModels="clr-namespace:SduNetCheckTool.GUI.ViewModels"
+    xmlns:views="clr-namespace:SduNetCheckTool.GUI.Views"
     Title="SDUNET CHECK TOOL"
     Width="800"
     Height="450"
-    d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel}"
     ui:WindowHelper.UseModernWindowStyle="True"
     mc:Ignorable="d">
-    <Window.Resources>
-        <converters:TaskStatus2VisibilityConverter x:Key="Status2VisibilityConverter" />
-        <converters:TaskStatus2SymbolConverter x:Key="SymbolConverter" />
-    </Window.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-
-        <ListBox IsSelected="False" ItemsSource="{Binding Tasks}">
-            <ListBox.ItemTemplate>
-                <DataTemplate DataType="{x:Type common:DetectionTask}">
-                    <StackPanel Orientation="Horizontal">
-                        <ui:SymbolIcon Symbol="{Binding TaskStatusEnum, Converter={StaticResource SymbolConverter}}" Visibility="{Binding TaskStatusEnum, Converter={StaticResource Status2VisibilityConverter}}" />
-                        <ProgressBar
-                            Width="30"
-                            Height="30"
-                            IsIndeterminate="True"
-                            Visibility="{Binding TaskStatusEnum, Converter={StaticResource Status2VisibilityConverter}, ConverterParameter=0}" />
-                        <TextBlock
-                            Margin="5"
-                            VerticalAlignment="Center"
-                            Text="{Binding Name}"
-                            ToolTip="{Binding Tips}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-
-        <Button
-            Grid.Row="1"
-            Margin="5"
-            HorizontalAlignment="Center"
-            Command="{Binding StartCommand}">
-            <StackPanel Orientation="Horizontal">
-                <ui:SymbolIcon Symbol="Refresh" />
-                <TextBlock Margin="5,2" Text="开始检测" />
-            </StackPanel>
-
-        </Button>
-    </Grid>
+    <views:RootView />
 </Window>
