--- a/SduNetCheckTool.GUI/Views/ToolBoxView.xaml
+++ b/SduNetCheckTool.GUI/Views/ToolBoxView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<ui:Page
     x:Class="SduNetCheckTool.GUI.Views.ToolBoxView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -13,71 +13,74 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <UserControl.Resources>
+    <ui:Page.Resources>
         <converters:TaskStatus2VisibilityConverter x:Key="Status2VisibilityConverter" />
         <converters:TaskStatus2SymbolConverter x:Key="SymbolConverter" />
-    </UserControl.Resources>
+    </ui:Page.Resources>
     <Grid>
-        <ListBox ItemsSource="{Binding Tasks}">
-            <ListBox.ItemTemplate>
-                <DataTemplate DataType="{x:Type common:UserPerformedTask}">
-                    <Expander>
-                        <Expander.Header>
-                            <StackPanel Margin="4" Orientation="Horizontal">
-                                <ui:SymbolIcon
-                                    Margin="5,0"
-                                    Symbol="{Binding TaskStatusEnum, Converter={StaticResource SymbolConverter}}"
-                                    Visibility="{Binding TaskStatusEnum, Converter={StaticResource Status2VisibilityConverter}}" />
-                                <ProgressBar
-                                    Width="30"
-                                    Height="30"
-                                    IsIndeterminate="True"
-                                    Visibility="{Binding TaskStatusEnum, Converter={StaticResource Status2VisibilityConverter}, ConverterParameter=0}" />
-                                <TextBlock
-                                    Margin="5"
-                                    VerticalAlignment="Center"
-                                    FontSize="15"
-                                    FontWeight="Bold"
-                                    Text="{Binding Name}" />
-                            </StackPanel>
-                        </Expander.Header>
-                        <Expander.Content>
-                            <Grid Margin="5">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                    <RowDefinition Height="10" />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
-                                <DockPanel>
-                                    <TextBox
-                                        Name="InputTextBox"
-                                        MinWidth="600"
+        <ScrollViewer ui:ScrollViewerHelper.AutoHideScrollBars="True" PreviewMouseWheel="ScrollViewer_OnPreviewMouseWheel">
+            <ListBox ItemsSource="{Binding Tasks}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate DataType="{x:Type common:UserPerformedTask}">
+                        <Expander>
+                            <Expander.Header>
+                                <StackPanel Margin="4" Orientation="Horizontal">
+                                    <ui:SymbolIcon
+                                        Margin="5,0"
+                                        Symbol="{Binding TaskStatusEnum, Converter={StaticResource SymbolConverter}}"
+                                        Visibility="{Binding TaskStatusEnum, Converter={StaticResource Status2VisibilityConverter}}" />
+                                    <ProgressBar
+                                        Width="30"
+                                        Height="30"
+                                        IsIndeterminate="True"
+                                        Visibility="{Binding TaskStatusEnum, Converter={StaticResource Status2VisibilityConverter}, ConverterParameter=0}" />
+                                    <TextBlock
                                         Margin="5"
-                                        ui:TextBoxHelper.IsDeleteButtonVisible="True"
-                                        Text="{Binding InputText}" />
-                                    <Button
+                                        VerticalAlignment="Center"
+                                        FontSize="15"
+                                        FontWeight="Bold"
+                                        Text="{Binding Name}" />
+                                </StackPanel>
+                            </Expander.Header>
+                            <Expander.Content>
+                                <Grid Margin="5">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="10" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <DockPanel>
+                                        <TextBox
+                                            Name="InputTextBox"
+                                            MinWidth="600"
+                                            Margin="5"
+                                            ui:TextBoxHelper.IsDeleteButtonVisible="True"
+                                            Text="{Binding InputText}" />
+                                        <Button
+                                            Margin="5"
+                                            Command="{Binding RunCommand}"
+                                            CommandParameter="{Binding InputText}"
+                                            Content="检测" />
+                                    </DockPanel>
+                                    <Border
+                                        Grid.Row="1"
+                                        Margin="0,3"
+                                        Background="DarkGray"
+                                        CornerRadius="1"
+                                        Opacity="0.5" />
+
+                                    <TextBlock
+                                        Grid.Row="2"
                                         Margin="5"
-                                        Command="{Binding RunCommand}"
-                                        CommandParameter="{Binding InputText}"
-                                        Content="检测" />
-                                </DockPanel>
-                                <Border
-                                    Grid.Row="1"
-                                    Margin="0,3"
-                                    Background="DarkGray"
-                                    CornerRadius="1"
-                                    Opacity="0.5" />
+                                        Text="{Binding Tips}" />
+                                </Grid>
+                            </Expander.Content>
 
-                                <TextBlock
-                                    Grid.Row="2"
-                                    Margin="5"
-                                    Text="{Binding Tips}" />
-                            </Grid>
-                        </Expander.Content>
+                        </Expander>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </ScrollViewer>
 
-                    </Expander>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
     </Grid>
-</UserControl>
+</ui:Page>
