feat:增加报告导出功能 feat:关于界面增加校园网炸了吗群链接 bump:版本更新到1.0.3

--- a/SduNetCheckTool.GUI/Views/TestView.xaml
+++ b/SduNetCheckTool.GUI/Views/TestView.xaml
@@ -82,6 +82,12 @@
                     <TextBlock Margin="6,2,2,2" Text="快速修复" />
                 </StackPanel>
             </Button>
+            <Button Margin="5" Command="{Binding ExportReportCommand}">
+                <StackPanel Orientation="Horizontal">
+                    <ui:SymbolIcon Symbol="OpenFile" />
+                    <TextBlock Margin="6,2,2,2" Text="导出报告" />
+                </StackPanel>
+            </Button>
         </StackPanel>
 
 
