--- a/SduNetCheckTool.GUI/Views/AboutView.xaml
+++ b/SduNetCheckTool.GUI/Views/AboutView.xaml
@@ -47,6 +47,7 @@
                     <ui:HyperlinkButton Content="山大主页 - https://www.sdu.edu.cn/" NavigateUri="https://www.sdu.edu.cn/" />
                     <ui:HyperlinkButton Content="山大镜像站 - https://mirrors.sdu.edu.cn/" NavigateUri="https://mirrors.sdu.edu.cn/" />
                     <ui:HyperlinkButton Content="校园网登录 - http://101.76.193.1/" NavigateUri="http://101.76.193.1/" />
+                    <ui:HyperlinkButton Content="校园网炸了么(2群) - 839609439 " NavigateUri="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&amp;k=xlRtamBWZCo-5cLFZxH0nMe2idMCtiD9&amp;authKey=O0sdTSLuVwPDvw6vHaoMoV%2FiaZ%2BhWUt8rTU4nCaWQ8dfjupKzIu1CXP%2B%2FtBRpcWM&amp;noverify=0&amp;group_code=839609439" />
                 </ListView.Items>
             </ListView>
         </StackPanel>
