feat:增加稳定版、测试版标识 chore:整理代码

--- a/SduNetCheckTool.GUI/Views/AboutView.xaml
+++ b/SduNetCheckTool.GUI/Views/AboutView.xaml
@@ -25,6 +25,8 @@
             <Run Text="{x:Static gui:Reference.Name}" />
             <Run Text=" - " />
             <Run Text="{x:Static gui:Reference.Version}" />
+            <Run Text=" - " />
+            <Run Text="{x:Static gui:Reference.Stable}" />
         </TextBlock>
         <StackPanel
             Grid.Row="1"
