--- a/SduNetCheckTool.GUI/Views/MainView.xaml
+++ b/SduNetCheckTool.GUI/Views/MainView.xaml
@@ -13,9 +13,10 @@
     ui:WindowHelper.UseModernWindowStyle="True"
     mc:Ignorable="d">
     <Window.Title>
-        <MultiBinding StringFormat="{}{0} - {1}">
+        <MultiBinding StringFormat="{}{0} - {1} - {2}">
             <Binding Source="{x:Static local:Reference.Name}" />
             <Binding Source="{x:Static local:Reference.Version}" />
+            <Binding Source="{x:Static local:Reference.Stable}"/>
         </MultiBinding>
     </Window.Title>
     <views:RootView />
