--- a/SduNetCheckTool.GUI/Views/ToolBoxView.xaml
+++ b/SduNetCheckTool.GUI/Views/ToolBoxView.xaml
@@ -108,6 +108,7 @@
                                     <RowDefinition Height="*" />
                                     <RowDefinition Height="10" />
                                     <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <DockPanel>
                                     <ComboBox
@@ -115,19 +116,39 @@
                                         MinWidth="300"
                                         Margin="5"
                                         ItemsSource="{Binding NetworkInterfaces}"
-                                        SelectedItem="{Binding SelectedNetworkInterfaces}" />
+                                        SelectedItem="{Binding SelectedNetworkInterface}">
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Name}" />
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
                                     <ComboBox
                                         Name="SelectDNSComboBox"
                                         MinWidth="300"
                                         Margin="5"
                                         ItemsSource="{Binding DNSSwitchItems}"
-                                        SelectedItem="{Binding SelectedDNSSwitchItem}" />
+                                        SelectedItem="{Binding SelectedDNSSwitchItem}">
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock
+                                                    Text="{Binding NameAndValue}" />
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
                                     <Button
                                         Margin="5"
                                         Command="{Binding RunCommand}"
                                         CommandParameter="{Binding InputText}"
                                         Content="修改DNS" />
                                 </DockPanel>
+                                <TextBox
+                                    Grid.Row="3"
+                                    Margin="5"
+                                    Text="{Binding CustomDNS, UpdateSourceTrigger=PropertyChanged}"
+                                    HorizontalAlignment="Stretch"
+                                    VerticalAlignment="Center" />
+
                                 <Border
                                     Grid.Row="1"
                                     Margin="0,3"
@@ -139,6 +160,7 @@
                                     Grid.Row="2"
                                     Margin="5"
                                     Text="{Binding Tips}" />
+
                             </Grid>
                         </Expander.Content>
                     </Expander>
@@ -151,12 +173,6 @@
             PreviewMouseWheel="ScrollViewer_OnPreviewMouseWheel">
             <ListBox ItemsSource="{Binding Tasks}"
                 ItemTemplateSelector="{StaticResource TaskTemplateSelector}">
-                <!-- <ListBox.ItemTemplate>
-                    <DataTemplate DataType="{x:Type common:UserPerformedTask}">
-                        <ContentControl Content="{Binding}"
-                            ContentTemplateSelector="{StaticResource TaskTemplateSelector}" />
-                    </DataTemplate>
-                </ListBox.ItemTemplate> -->
             </ListBox>
         </ScrollViewer>
     </Grid>
