--- a/SduNetCheckTool.GUI/Views/TestView.xaml
+++ b/SduNetCheckTool.GUI/Views/TestView.xaml
@@ -2,13 +2,12 @@
     x:Class="SduNetCheckTool.GUI.Views.TestView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:common="clr-namespace:SduNetCheckTool.GUI.Common"
+    xmlns:common="clr-namespace:SduNetCheckTool.Mvvm.Common;assembly=SduNetCheckTool.Mvvm"
     xmlns:converters="clr-namespace:SduNetCheckTool.GUI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:SduNetCheckTool.GUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
-    xmlns:viewModels="clr-namespace:SduNetCheckTool.GUI.ViewModels"
+    xmlns:viewModels="clr-namespace:SduNetCheckTool.Mvvm.ViewModels;assembly=SduNetCheckTool.Mvvm"
     d:DataContext="{d:DesignInstance Type=viewModels:TestViewModel}"
     d:DesignHeight="800"
     d:DesignWidth="1000"
@@ -23,7 +22,8 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ScrollViewer ui:ScrollViewerHelper.AutoHideScrollBars="True" PreviewMouseWheel="ScrollViewer_OnPreviewMouseWheel">
+        <ScrollViewer ui:ScrollViewerHelper.AutoHideScrollBars="True"
+                      PreviewMouseWheel="ScrollViewer_OnPreviewMouseWheel">
             <ListBox IsSelected="False" ItemsSource="{Binding Tasks}">
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type common:DetectionTask}">
@@ -110,13 +110,12 @@
         </ScrollViewer>
 
 
-
         <StackPanel
             Grid.Row="1"
             Margin="5"
             HorizontalAlignment="Center"
             Orientation="Horizontal">
-            <Button Margin="5" Command="{Binding StartCommand}">
+            <Button Margin="5" Command="{Binding StartDetectCommand}">
                 <StackPanel Orientation="Horizontal">
                     <ui:SymbolIcon Symbol="Refresh" />
                     <TextBlock Margin="6,2,2,2" Text="开始检测" />
