--- a/SduNetCheckTool.GUI/Views/ToolBoxView.xaml
+++ b/SduNetCheckTool.GUI/Views/ToolBoxView.xaml
@@ -2,6 +2,7 @@
     x:Class="SduNetCheckTool.GUI.Views.ToolBoxView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:SduNetCheckTool.Mvvm.Common;assembly=SduNetCheckTool.Mvvm"
     xmlns:converters="clr-namespace:SduNetCheckTool.GUI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,11 +13,34 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <ui:Page.Resources>
+        <converters:TaskStatus2VisibilityConverter x:Key="Status2VisibilityConverter" />
+        <converters:TaskStatus2SymbolConverter x:Key="SymbolConverter" />
     </ui:Page.Resources>
     <Grid>
-        <ScrollViewer ui:ScrollViewerHelper.AutoHideScrollBars="True"
-                      PreviewMouseWheel="ScrollViewer_OnPreviewMouseWheel">
-            <ListBox ItemsSource="{Binding Tasks}" />
+        <ScrollViewer ui:ScrollViewerHelper.AutoHideScrollBars="True" PreviewMouseWheel="ScrollViewer_OnPreviewMouseWheel">
+            <ListBox ItemsSource="{Binding Tabs}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate DataType="{x:Type common:ToolboxTab}">
+                        <StackPanel Orientation="Horizontal">
+                            <Expander>
+                                <Expander.Header>
+                                    <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+                                        <TextBlock
+                                            Margin="5"
+                                            VerticalAlignment="Center"
+                                            FontSize="15"
+                                            FontWeight="Bold"
+                                            Text="{Binding Name}" />
+                                    </StackPanel>
+                                </Expander.Header>
+                                <Expander.Content>
+                                    <ui:Frame Content="{Binding Ui}" />
+                                </Expander.Content>
+                            </Expander>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </ScrollViewer>
     </Grid>
 </ui:Page>
