--- a/SduNetCheckTool.GUI/Views/ToolboxTabs/DNSSwitchView.xaml
+++ b/SduNetCheckTool.GUI/Views/ToolboxTabs/DNSSwitchView.xaml
@@ -45,7 +45,31 @@
             <Button
                 Margin="5"
                 Command="{Binding RunDnsSwitchCommand}"
-                Content="修改DNS" />
+                Content="修改DNS">
+                <Button.Style>
+                    <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsDnsSwitchEnabled}" Value="False">
+                                <Setter Property="IsEnabled" Value="False"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+            <Button
+                Margin="5"
+                Command="{Binding RebootAsAdminCommand}"
+                Content="以管理员权限重启" >
+                <Button.Style>
+                    <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsDnsSwitchEnabled}" Value="True">
+                                <Setter Property="IsEnabled" Value="False"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
         </DockPanel>
         <TextBox
             Grid.Row="3"
